added category, showed comments, concurrency

--- a/Scotty-Crud.cabal
+++ b/Scotty-Crud.cabal
@@ -35,6 +35,7 @@ library
                     , scientific
                     , time
                     , string-interpolate
+                    , async
 
     hs-source-dirs:   src
     default-language: GHC2021
