--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:
       Lib
       Platform.API
+      Platform.Common.AppM
       Platform.Common.Types
       Platform.Common.Utils
       Platform.Core
@@ -48,6 +49,7 @@ library
     , servant-server
     , text
     , time
+    , warp
   default-language: Haskell2010
 
 executable haskread-platform-be-exe
@@ -69,6 +71,7 @@ executable haskread-platform-be-exe
     , servant-server
     , text
     , time
+    , warp
   default-language: Haskell2010
 
 test-suite haskread-platform-be-test
@@ -91,4 +94,5 @@ test-suite haskread-platform-be-test
     , servant-server
     , text
     , time
+    , warp
   default-language: Haskell2010
