--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -49,6 +49,9 @@ library
       Platform.User.Thread.DB
       Platform.User.Thread.Handler
       Platform.User.Thread.Types
+      Platform.User.Thread.VoteThread.DB
+      Platform.User.Thread.VoteThread.Handler
+      Platform.User.Thread.VoteThread.Types
       Platform.User.Types
   other-modules:
       Paths_haskread_platform_be
