--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -76,6 +76,7 @@ library
     , http-types
     , mtl
     , orville-postgresql
+    , password
     , servant-auth-server
     , servant-multipart
     , servant-server
@@ -112,6 +113,7 @@ executable haskread-platform-be-exe
     , http-types
     , mtl
     , orville-postgresql
+    , password
     , servant-auth-server
     , servant-multipart
     , servant-server
@@ -157,6 +159,7 @@ test-suite haskread-platform-be-test
     , http-types
     , mtl
     , orville-postgresql
+    , password
     , servant-auth-server
     , servant-multipart
     , servant-server
