--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -69,6 +69,7 @@ library
     , async
     , base >=4.7 && <5
     , bytestring
+    , containers
     , dhall
     , directory
     , fast-logger
@@ -76,7 +77,10 @@ library
     , hashable
     , haxl
     , hedgehog
+    , hoauth2
+    , hoauth2-providers
     , http-api-data
+    , http-conduit
     , http-types
     , mtl
     , orville-postgresql
@@ -93,7 +97,9 @@ library
     , tasty-wai
     , text
     , time
+    , transformers
     , unliftio
+    , uri-bytestring
     , warp
   default-language: Haskell2010
 
@@ -109,6 +115,7 @@ executable haskread-platform-be-exe
     , async
     , base >=4.7 && <5
     , bytestring
+    , containers
     , dhall
     , directory
     , fast-logger
@@ -117,7 +124,10 @@ executable haskread-platform-be-exe
     , haskread-platform-be
     , haxl
     , hedgehog
+    , hoauth2
+    , hoauth2-providers
     , http-api-data
+    , http-conduit
     , http-types
     , mtl
     , orville-postgresql
@@ -134,7 +144,9 @@ executable haskread-platform-be-exe
     , tasty-wai
     , text
     , time
+    , transformers
     , unliftio
+    , uri-bytestring
     , warp
   default-language: Haskell2010
 
@@ -159,6 +171,7 @@ test-suite haskread-platform-be-test
     , async
     , base >=4.7 && <5
     , bytestring
+    , containers
     , dhall
     , directory
     , fast-logger
@@ -167,7 +180,10 @@ test-suite haskread-platform-be-test
     , haskread-platform-be
     , haxl
     , hedgehog
+    , hoauth2
+    , hoauth2-providers
     , http-api-data
+    , http-conduit
     , http-types
     , mtl
     , orville-postgresql
@@ -184,6 +200,8 @@ test-suite haskread-platform-be-test
     , tasty-wai
     , text
     , time
+    , transformers
     , unliftio
+    , uri-bytestring
     , warp
   default-language: Haskell2010
