Added nested comment logic

--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -35,6 +35,7 @@ library
       Platform.Comment.DB
       Platform.Comment.Handler
       Platform.Comment.Types
+      Platform.Comment.Utils
       Platform.Common.AppM
       Platform.Common.Types
       Platform.Common.Utils
@@ -100,6 +101,7 @@ library
     , transformers
     , unliftio
     , uri-bytestring
+    , vector
     , warp
   default-language: Haskell2010
 
@@ -147,6 +149,7 @@ executable haskread-platform-be-exe
     , transformers
     , unliftio
     , uri-bytestring
+    , vector
     , warp
   default-language: Haskell2010
 
@@ -203,5 +206,6 @@ test-suite haskread-platform-be-test
     , transformers
     , unliftio
     , uri-bytestring
+    , vector
     , warp
   default-language: Haskell2010
