WIP: Adding UI Application Monad Stack

--- a/haskread-platform-ui/spago.yaml
+++ b/haskread-platform-ui/spago.yaml
@@ -3,8 +3,9 @@ package:
   dependencies:
     - console
     - effect
+    - halogen
+    - halogen-store
     - prelude
-    - halogen 
     - undefined
   test:
     main: Test.Main
