Milestone: Was able to show content from Backend to UI

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 haskread-platform-be/.logs/dev_logs.txt
+haskread-platform-be/dist-newstyle/cache/compiler
+haskread-platform-be/dist-newstyle/cache/config
+haskread-platform-be/.logs/dev_logs.txt
+.psc-ide-port
