--- a/haskread-platform-be/haskread-platform-be.cabal
+++ b/haskread-platform-be/haskread-platform-be.cabal
@@ -101,7 +101,7 @@ library
     , transformers
     , unliftio
     , uri-bytestring
-    , vector
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -149,7 +149,7 @@ executable haskread-platform-be-exe
     , transformers
     , unliftio
     , uri-bytestring
-    , vector
+    , wai-cors
     , warp
   default-language: Haskell2010
 
@@ -206,6 +206,6 @@ test-suite haskread-platform-be-test
     , transformers
     , unliftio
     , uri-bytestring
-    , vector
+    , wai-cors
     , warp
   default-language: Haskell2010
