UI: Added Login Form

--- a/haskread-platform-ui/spago.yaml
+++ b/haskread-platform-ui/spago.yaml
@@ -6,6 +6,7 @@ package:
     - console
     - effect
     - halogen
+    - halogen-formless
     - halogen-store
     - http-methods
     - media-types
