--- a/haskread-platform-ui/.gitignore
+++ b/haskread-platform-ui/.gitignore
@@ -1,15 +1,36 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-bower_components/
-node_modules/
-.pulp-cache/
-output/
-output-es/
-generated-docs/
-.psc-package/
-.psc*
-.purs*
-.psa*
-.spago
-spago.lock
-index.js
-.psc-ide-port
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
