Fixed UI CI test failure

--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: install dependancies, build and test stack project.
       uses: freckle/stack-action@v5
       with:
-        working-directory: ./haskread-platform-be/
+        working-directory: ./haskread-platform-ui/
         stack-build-arguments: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
         stack-build-arguments-test: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
 
