--- a/.github/workflows/haskell.yaml
+++ b/.github/workflows/haskell.yaml
@@ -33,10 +33,16 @@ jobs:
       uses: freckle/stack-action@v5
       with:
         working-directory: ./haskread-platform-ui/
-        stack-build-arguments: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
+        stack-build-arguments: --copy-bins --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
         stack-build-arguments-test: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
 
-  build:
+    - name: upload ui binary
+      uses: actions/upload-artifact@v4
+      with:
+          name: ui-binary
+          path: /home/runner/.local/bin/haskread-platform-ui-exe
+
+  build-be:
     environment: Test Env
     runs-on: ubuntu-22.04
     defaults:
@@ -56,8 +62,39 @@ jobs:
       uses: freckle/stack-action@v5
       with:
         working-directory: ./haskread-platform-be/
-        stack-build-arguments: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
+        stack-build-arguments: --copy-bins --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
         stack-build-arguments-test: --ghc-options="-fno-warn-unused-imports -fno-warn-unused-matches -fno-warn-type-defaults -fno-warn-missing-export-lists"
+
+    - name: upload be binary
+      uses: actions/upload-artifact@v4
+      with:
+          name: be-binary
+          path: /home/runner/.local/bin/haskread-platform-be-exe
 
     - name: stop test database
       run: make stopTestDB
+
+  deploy:
+    needs : [build-be, build-ui]
+    environment: Test Env
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Authenticate with GCP
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SERVICE_KEY }}
+
+      - name: Download Binaries
+        uses: actions/download-artifact@v4
+        with:
+          path: ./artifacts
+
+      - name: Upload UI binary to GCS
+        uses: google-github-actions/upload-cloud-storage@v2
+        with:
+          path: ./artifacts
+          destination: haskread_ci_storage
