--- a/haskread-platform-ui/package.yaml
+++ b/haskread-platform-ui/package.yaml
@@ -31,6 +31,9 @@ dependencies:
 - http-conduit
 - web-view
 - bytestring
+- hyperbole 
+- data-default-class >= 0.2
+- data-default >= 0.8.0
 
 ghc-options:
 - -Wall
