--- a/haskread-platform-ui/haskread-platform-ui.cabal
+++ b/haskread-platform-ui/haskread-platform-ui.cabal
@@ -51,6 +51,7 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , base64
     , bytestring
     , data-default >=0.8.0
     , data-default-class >=0.2
@@ -77,6 +78,7 @@ executable haskread-platform-ui-exe
   build-depends:
       aeson
     , base >=4.7 && <5
+    , base64
     , bytestring
     , data-default >=0.8.0
     , data-default-class >=0.2
@@ -105,6 +107,7 @@ test-suite haskread-platform-ui-test
   build-depends:
       aeson
     , base >=4.7 && <5
+    , base64
     , bytestring
     , data-default >=0.8.0
     , data-default-class >=0.2
